controller:  - we can now change the input language with a checkbox  - fixed a gcode package visibility code  - better controller visual appearance

--- a/webapp/twoDView.css
+++ b/webapp/twoDView.css
@@ -48,4 +48,5 @@
     text-anchor: middle;
     cursor: default;
     stroke: none;
+    fill: rgb(128, 128, 128);
 }
